# payment_order_service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_schema.py
docs/: do_schema.sql
src/application/dto/: payment.py
src/application/ports/: bank_api.py  order_repository.py  payment_processor.py  unit_of_work.py
src/application/use_cases/: create_payment.py  refund_payment.py  sync_acquiring_status.py
src/domain/: events.py  exceptions.py
src/domain/entities/: order.py  payment.py
src/domain/value_objects/: enums.py  identifiers.py  money.py
src/infrastructure/logging/: correlation.py
src/infrastructure/payments/: processors.py
src/infrastructure/persistence/: db.py  seed.py  unit_of_work.py
src/infrastructure/persistence/models/: acquiring_details.py  order.py  payment.py
src/infrastructure/persistence/repositories/: order_repository.py
src/presentation/: dependencies.py  main.py  settings.py
src/presentation/api/: routes.py
src/presentation/schemas/: errors.py  payment.py
tests/e2e/: test_create_and_refund_api.py
tests/fakes/: fake_bank_client.py  fake_order_repository.py
tests/integration/: test_order_repository.py
tests/unit/application/: test_create_and_refund_usecases.py
tests/unit/domain/: test_money_value_object.py  test_order_aggregate.py
