[project]
name = "payment-order-service"
version = "0.1.0"
description = "Order payment management service"
requires-python = ">=3.11"
authors = [
    { name = "Mike" },
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "httpx[http2]>=0.27.0",
    "tenacity>=8.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
    "types-requests",
    "types-python-dateutil",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E203", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["domain", "application", "infrastructure", "presentation"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_any_unimported = false
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["src", "."]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/domain --cov=src/application --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

